--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-02-11 08:50:58
-# Total rules: 10837
+# Generated from relevant_rules_wildcard_aware.txt on 2026-02-11 11:05:37
+# Total rules: 10790
 # Allowlist applied: allowlist.txt
 
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -678,7 +678,6 @@
 .acsystem.wasu.tv
 .act.qq.com
 .act.snssdk.com
-.act.vip.iqiyi.com
 .activate-sea.adobe.com
 .activate-sjc0.adobe.com
 .activate.adobe.com
@@ -686,7 +685,6 @@
 .actives.youku.com
 .activities.alibaba.com
 .activity.api.bbc.co.uk
-.activity.app.autohome.com.cn
 .activity.baidu.com
 .activity.browser.intl.miui.com
 .activity.windows.com
@@ -774,7 +772,6 @@
 .ad.m.iqiyi.com
 .ad.mail.ru
 .ad.mail.sohu.com
-.ad.mcloud.139.com
 .ad.mh.163.com
 .ad.mi.com
 .ad.mobile.youku.com
@@ -1329,7 +1326,6 @@
 .alphaupsell.s3.ap-northeast-2.amazonaws.com
 .alpwiijq5x.data.adobedc.net
 .als-svc.nytimes.com
-.als.baidu.com
 .alt-ad.mail.ru
 .alterramountaincompany.data.adobedc.net
 .altmetric.com
@@ -1626,7 +1622,6 @@
 .api.sms.intl.miui.com
 .api.stacksocial.com
 .api.uca.cloud.unity3d.com
-.api.vip.miui.com
 .api.wapa.taobao.com
 .api.waptest.taobao.com
 .api.xk.miui.com
@@ -1655,7 +1650,6 @@
 .apiproxy-logging-s4-164762ccd0989fc7.elb.us-east-2.amazonaws.com
 .apiproxy-logging-s4-4e4dbfdf43752432.elb.eu-west-1.amazonaws.com
 .apiproxy-logging-s4-a123fa8d414246ea.elb.us-west-2.amazonaws.com
-.apis.google.com
 .apisgame.iqiyi.com
 .apissug-sf.ucweb.com
 .apiv4-iyes.youku.com
@@ -1678,7 +1672,6 @@
 .app-monitor.ele.me
 .app-tracking-gfa-collector.naver.com
 .app.accelerate.zoominfo.com
-.app.chat.xiaomi.net
 .app.launchdarkly.com
 .app.mintmobile.com
 .app.miui.com
@@ -1697,7 +1690,6 @@
 .appcfg.v.qq.com
 .appchannel.html5.qq.com
 .appcloud2.zhihu.com
-.appconf.heytapdownload.com
 .appdownload.alicdn.com
 .appdynamics.com
 .appgallery.cloud.huawei.com
@@ -1912,7 +1904,6 @@
 .bc.qunar.com
 .bcbsks.data.adobedc.net
 .bcd.caiyunapp.com
-.bce.baidu.com
 .bcfeedback.taobao.com
 .bchtstmets.data.adobedc.net
 .bcsjcj.nasdaq.com
@@ -2139,7 +2130,6 @@
 .c.autohome.com.cn
 .c.baidu.com
 .c.be.msn.com
-.c.bing.com
 .c.bingapis.com
 .c.br.msn.com
 .c.ca.msn.com
@@ -2388,7 +2378,6 @@
 .click.hd.sohu.com
 .click.jr.jd.com
 .click.lenovo.com
-.click.mz.simba.taobao.com
 .click.nvgaming.nvidia.com
 .click.oneplus.cn
 .click.oneplus.com
@@ -2855,7 +2844,6 @@
 .connext-cdn.azureedge.net
 .consensu.org
 .consent.bbcgoodfood.com
-.consent.cmp.oath.com
 .consent.dropbox.com
 .consent.economist.com
 .consentmanager.net
@@ -3015,7 +3003,6 @@
 .cuocthianhmuahebeyeu.weebly.com
 .cuocthigionghatvietnhi2021.weebly.com
 .cuocthitainangnhithang12.weebly.com
-.cupid.iqiyi.com
 .curiosity-seven.vercel.app
 .currencyconverterbanking.weebly.com
 .current.sina.com.cn
@@ -4383,7 +4370,6 @@
 .d9v72urx9pbbc.cloudfront.net
 .d9yk47of1efyy.cloudfront.net
 .da.mgtv.com
-.da.mmarket.com
 .da.netease.com
 .da032opzasz.appspot.com
 .da26k71rxh0kb.cloudfront.net
@@ -4464,7 +4450,6 @@
 .data.mail.contentauthenticity.adobe.com
 .data.messaging.paypal.com
 .data.mgtv.com
-.data.microsoft.com
 .data.msn.com
 .data.news.paypal.com
 .data.newsletter.paypal.com
@@ -5108,7 +5093,6 @@
 .egencia.com.data.adobedc.net
 .ehd.baike.com
 .eic-ngfts.lge.com
-.eimg.smzdm.com
 .eiv.baidu.com
 .elcorteingles.data.adobedc.net
 .eldoradottfha.dataplane.rudderstack.com
@@ -5445,7 +5429,6 @@
 .fp-cdn.azureedge.net
 .fp-flame.vercel.app
 .fp-it-acc.portal101.cn
-.fp-upload.dun.163.com
 .fp.techinasia.com
 .fpa-api.arstechnica.com
 .fpa-cdn.arstechnica.com
@@ -5714,13 +5697,11 @@
 .grp10.ias.rakuten.co.jp
 .grp15.ias.rakuten.co.jp
 .grp16.ias.rakuten.co.jp
-.grpc.biliapi.net
 .grs.dbankcloud.asia
 .grs.hicloud.com
 .gscounters.gigya.com
 .gscounters.us1.gigya.com
 .gsearch.vivo.com.cn
-.gsp0.baidu.com
 .gsp1.baidu.com
 .gsp2.baidu.com
 .gsp3.baidu.com
@@ -6056,11 +6037,9 @@
 .iam-rum-intake.datadoghq.com
 .ias.tencent-cloud.net
 .iask.qq.com
-.ib.snssdk.com
 .ibc-flow.techtarget.com
 .ibibnw8nj0.data.adobedc.net
 .ic.ksosoft.com
-.ic.snssdk.com
 .ic.wps.cn
 .icelandclothing.myshopify.com
 .ichannel.snssdk.com
@@ -6079,7 +6058,6 @@
 .id.l.google.com
 .id.mail.wo.cn
 .id5-sync.com
-.id6.me
 .idapp.adjust.com
 .idce7nfume.data.adobedc.net
 .iddu1vvb7sk8-a.akamaihd.net
@@ -6239,7 +6217,6 @@
 .info-fsi.stanford.edu
 .info.3g.qq.com
 .info.assets.reuters.com
-.info.pinyin.sogou.com
 .info.redhat.com
 .info.scene7.com
 .info.wps.cn
@@ -6318,7 +6295,6 @@
 .irs01.youku.com
 .is-lq.snssdk.com
 .is.lg.com
-.is.snssdk.com
 .is.snssdk.com.w.alikunlun.com
 .isagi-two-gun-volley.pages.dev
 .isdspeed.qq.com
@@ -6422,7 +6398,6 @@
 .jswebcollects.kugou.com
 .jsync.m.qq.com
 .ju.mmstat.com
-.ju.taobao.com
 .judge.me
 .judge.snssdk.com
 .juejin.im
@@ -7019,7 +6994,6 @@
 .mcs-va.tiktok.com
 .mcs-va.tiktokv.com
 .mcs.capcutapi.us
-.mcs.snssdk.com
 .mcs.us.tiktok.com
 .mcs.us.tiktokv.com
 .mcs.zijieapi.com
@@ -7146,7 +7120,6 @@
 .minfo.wps.cn
 .mini.browser.360.cn
 .mini2015.qq.com
-.miniapp.bilibili.com
 .miniapp.gtimg.cn
 .minidcsc.kugou.com
 .minigame3-normal.zijieapi.com
@@ -7161,7 +7134,6 @@
 .mistat.intl.xiaomi.com
 .mistat.intl.xiaomi.com.edgesuite.net
 .mistat.rus.xiaomi.com
-.mistat.xiaomi.com
 .miui.security.xiaomi.com
 .mivideo.g.mi.com
 .mixer.sina.cn
@@ -7444,7 +7416,6 @@
 .newspush.sinajs.cn
 .newtest.wunderman-email.cjm.adobe.com
 .newton-api.ele.me
-.newvector.map.baidu.com
 .nex.163.com
 .nex.corp.163.com
 .nexage.com
@@ -7593,7 +7564,6 @@
 .oms.wsj.com
 .omtr1.partners.salesforce.com
 .omtr2.partners.salesforce.com
-.omtrdc.net
 .onecollector.cloudapp.aria.akadns.net
 .onefootbalnurg.dataplane.rudderstack.com
 .oneid.mmstat.com
@@ -7717,7 +7687,6 @@
 .p2ptun.qq.com
 .p2pupdate.gamedl.qq.com
 .p2pupgrade.gamedl.qq.com
-.p3-ad-sign.byteimg.com
 .p3-tt.byteimg.com
 .p3a-creative.brave.com
 .p3a-json.brave.com
@@ -7894,7 +7863,6 @@
 .ping.cloud.tencent.com
 .ping.map.qq.com
 .ping.pdst.fm
-.ping.pinyin.sogou.com
 .ping4.sina.cn
 .ping64.sina.cn
 .pingback.giphy.com
@@ -7908,7 +7876,6 @@
 .pingmid.qq.com
 .pingtas.qq.com
 .pingtcss.qq.com
-.pipe.aria.microsoft.com
 .pipedream.wistia.com
 .pipi.cn
 .piwik.pcgamingwiki.com
@@ -8152,7 +8119,6 @@
 .q0jo16uy1r.data.adobedc.net
 .qa-brc.emails.rakuten.com
 .qapm.baidu.com
-.qappcenterv6.3g.qq.com
 .qbreport.html5.qq.com
 .qbwup.html5.qq.com
 .qc.arstechnica.com
@@ -8321,7 +8287,6 @@
 .reports.omegacommerce.com
 .repsol.data.adobedc.net
 .request.verisign.com
-.res-ga.smzdm.com
 .res.mail.qq.com
 .res.mgtv.com
 .res.mi.baidu.com
@@ -8631,7 +8596,6 @@
 .searchsqlserver.techtarget.com
 .seat.data.adobedc.net
 .sec-cdn.static.xiaomi.net
-.sec.miui.com
 .sec.resource.xiaomi.net
 .sec.video.qq.com
 .seccliprod.alipay.com
@@ -8642,7 +8606,6 @@
 .secureflashplayerfeedback.adobe.com
 .secureir.ebaystatic.com
 .securemetrics-z.v.aaplimg.com
-.securemetrics.apple.com
 .securemetrics.apple.com.cn
 .securemetrics.v.aaplimg.com
 .securemvt.apple.com
@@ -8896,7 +8859,6 @@
 .shopsquare.naver.com
 .shopvalorant.weebly.com
 .shouji.360.cn
-.shouji.sogou.com
 .show-msgch.qq.com
 .show.look.360.cn
 .showbiz.mail.ru
@@ -9295,7 +9257,6 @@
 .surveygizmobeacon.s3.amazonaws.com
 .susapi.lenovomm.com
 .suvset.sohu.com
-.sv.map.baidu.com
 .svenskahandelsbankenabanalytics.data.adobedc.net
 .sw.mobile.sogou.com
 .swa.gtimg.com
@@ -9322,7 +9283,6 @@
 .system-debug-1.b-cdn.net
 .systemeu.data.adobedc.net
 .sz88.oss-cn-shenzhen.aliyuncs.com
-.szlong.weixin.qq.com
 .t-ads.xiaohongshu.com
 .t-dsp.pinduoduo.com
 .t-l.play.cp81.ott.cibntv.net
@@ -9421,7 +9381,6 @@
 .tcookie.usatoday.com
 .tcss.qq.com
 .tdc.qq.com
-.tdid.m.qq.com
 .tdrec.youku.com
 .tdum.alibaba.com
 .teads.tv
@@ -9500,7 +9459,6 @@
 .tgw-masdk.3g.qq.com
 .tgw-sasdk.3g.qq.com
 .th-a.pinduoduo.com
-.th.bing.com
 .theamericanautoassociation.data.adobedc.net
 .thecooperativebank.data.adobedc.net
 .thefootballassociationpremierl.data.adobedc.net
@@ -9516,7 +9474,6 @@
 .thutucnhantiennuocngoai24h.weebly.com
 .thutucnhantienquydoi24h.weebly.com
 .tianshu-x.gtimg.cn
-.tianshu.gtimg.cn
 .tianwenca.com
 .tillertag-a.akamaihd.net
 .timejs.game.163.com
@@ -9838,7 +9795,6 @@
 .ug.snssdk.com
 .ugcbrainient-a.akamaihd.net
 .ugcup.music.qq.com
-.ugdtimg.com
 .uhjdo3agp9.data.adobedc.net
 .uid.ksosoft.com
 .uil.cbs.baidu.com
@@ -10054,7 +10010,6 @@
 .vcl-brain.snssdk.com
 .vcode-api.vivo.com.cn
 .vcode-od.vivo.com.cn
-.vcs.snssdk.com
 .vcs.zijieapi.com
 .vcsa.telemetry.broadcom.com.cdn.cloudflare.net
 .vdfccjpnedujhrzscjtq.supabase.co
@@ -10309,7 +10264,6 @@
 .wspeed.qq.com
 .wth.lenovomm.com
 .wtr-digital-analytics.ew.r.appspot.com
-.wtradv.market.xiaomi.com
 .wup-1172d361.ind.v2.we-stats.com.cdn.cloudflare.net
 .wup.browser.qq.com
 .wup.html5.qq.com
@@ -10367,7 +10321,6 @@
 .xlog.tiktokv.com
 .xlog16-normal-c-useast2a.tiktokv.com
 .xmaterial.tu.qq.com
-.xmpush.xiaomi.com
 .xne1ocient87zxz.360doc.cn
 .xoada0pzosa.appspot.com
 .xp.atlassian.com
@@ -10617,7 +10570,6 @@ events-analytics.apple.com
 f1.g.mi.com
 f6.market.xiaomi.com
 f7.market.xiaomi.com
-f8.market.xiaomi.com
 fe02.lg.xiaomi.com
 fe05.lg.xiaomi.com
 feedback.search.microsoft.com
@@ -10705,6 +10657,7 @@ mibi.api.xiaomi.com
 micardapi.micloud.xiaomi.net
 miniapp-ad.cdn.bcebos.com
 mis.migc.xiaomi.com
+mistat.xiaomi.com
 mixern.sina.cn
 mob.bz.mgtv.com
 mobile.da.mgtv.com
