--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,6 +1,8 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-02-11 16:27:21
-# Total rules: 10596
-# Allowlist applied: allowlist.txt
+# Surge/Clash Domain Set
+# 生成时间: 2026-02-11 21:06:01
+# 源文件: relevant_rules_wildcard_aware.txt
+# 转换模式: balanced
+# 规则总数: 10652
 
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
 .0a0d-d3l1vr.b-cdn.net
@@ -79,6 +81,7 @@
 .3rd.t.sohu.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .4hfvbao1ea.execute-api.ap-northeast-2.amazonaws.com
+.4paradigm.com
 .4xpeyiyqca.data.adobedc.net
 .51.la
 .5cih9gxsul.data.adobedc.net
@@ -89,11 +92,11 @@
 .64vxnlajoo.data.adobedc.net
 .682a5845.b-cdn.net
 .69app.adjust.com
+.6mls9l0fcr.data.adobedc.net
 .70e0lr7rnk.data.adobedc.net
 .781081410579-uspro-s3-telemetry-overflow.s3.us-east-1.amazonaws.com
 .7dzt0xnemh.data.adobedc.net
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
-.7q1z79gxsi.global.ssl.fastly.net
 .7zgiest3zy.data.adobedc.net
 .8035ugt-w34hrg-0hjwre-ghjew-r0hg-ehg9-h-rtg.obs.af-south-1.myhuaweicloud.com
 .829331534d183e7d1f6a-8d91cc88b27b979d0ea53a10ce8855ec.r96.cf5.rackcdn.com
@@ -110,7 +113,6 @@
 .9kvptcrbor.data.adobedc.net
 .9svjumhzt6.data.adobedc.net
 .9w2zed1szg.execute-api.us-east-1.amazonaws.com
-.Media.net
 .a-dxk.play.api.3g.youku.com
 .a-reporting.nytimes.com
 .a.ac.qq.com
@@ -559,6 +561,7 @@
 .a5435521705.cdn.optimizely.com
 .a5470051562684416.cdn.optimizely.com
 .a5530288147660800.cdn.optimizely.com
+.a5530996594966528.cdn.optimizely.com
 .a5532459098439680.cdn.optimizely.com
 .a5552864383205376.cdn.optimizely.com
 .a5584628518486016.cdn.optimizely.com
@@ -778,7 +781,6 @@
 .ad.thepaper.cn
 .ad.thsi.cn
 .ad.toutiao.com
-.ad.us.sinaimg.cn
 .ad.usatoday.com
 .ad.v3mh.com
 .ad.weibo.com
@@ -1165,7 +1167,6 @@
 .adv.ccb.com
 .adv.sec.intl.miui.com
 .advancelocal-adapter-image-uploads.s3.amazonaws.com
-.advbanners.global.ssl.fastly.net
 .adver.qq.com
 .advert-prod.hyrz.qq.com
 .advert.ainvest.com
@@ -1242,6 +1243,7 @@
 .agent.ap1.datadoghq.com
 .agent.datadoghq.com
 .agent.sj.qq.com
+.agentlayer-xyz.pages.dev
 .agility.cnn.com
 .agoo-report.m.taobao.com
 .agoodm.m.taobao.com
@@ -1640,6 +1642,7 @@
 .apoll.m.taobao.com
 .app-ads-services.com
 .app-analytics-services.com
+.app-defituna.github.io
 .app-matomo-prd-weu1-app.azurewebsites.net
 .app-measurement.com
 .app-monitor.ele.me
@@ -1684,6 +1687,7 @@
 .applogios.uc.cn
 .applovin.com
 .applvn.com
+.appmemekombatclaim.pages.dev
 .appmetrica.yandex.ru
 .appnext-a.akamaihd.net
 .apppush-sh5.xiaohongshu.com
@@ -1726,7 +1730,6 @@
 .as.wiley.com
 .as1.wenku.baidu.com
 .as54rdxfzxs.appspot.com
-.ascpqnj-oam.global.ssl.fastly.net
 .asearch.alicdn.com
 .asgh65tfsdxz.appspot.com
 .asia-abeacdataonrt-stsdk.vivoglobal.com
@@ -1770,6 +1773,7 @@
 .asrv-a.akamaihd.net
 .assemblyexchange.com
 .assets-momentum.akamaized.net
+.assets.adobedtm.com
 .assets.iterable.com
 .assetsconfigcdn.org
 .assp.sohu.com
@@ -1807,6 +1811,8 @@
 .auto-deploy.pages.dev
 .autofill.yandex.ru
 .autolinkmaker.itunes.apple.com
+.automate-prod.s3.amazonaws.com
+.avgle.topgirlsdating.com
 .aviary.amazon.com
 .avisbudgetgroup.data.adobedc.net
 .avivauk.data.adobedc.net
@@ -1985,6 +1991,7 @@
 .blackhole-m.m.jd.com
 .blackhole.m.jd.com
 .blacktri-a.akamaihd.net
+.blastairdropclaims.pages.dev
 .bldr.mkt.samsung.com
 .blogad01.myweb.hinet.net
 .blogad02.myweb.hinet.net
@@ -2056,6 +2063,7 @@
 .brg0.com
 .browser-intake-datadoghq.com
 .browser-intake-us5-datadoghq.com
+.browser.events.data.microsoft.com
 .browser.miui.com
 .browser.vivo.com.cn
 .browserconf.vivo.com.cn
@@ -2090,6 +2098,7 @@
 .by2.uservoice.com
 .bybapp.adjust.com
 .byteadverts.com
+.bytegoofy.com
 .bz-ipdx.baidu.com
 .bzclk.baidu.com
 .c-5uwzmx78pmca09x24aiux2euavx2ekwu.g00.msn.com
@@ -2166,7 +2175,6 @@
 .cachenotice.cp11.ott.cibntv.net
 .caclick.baidu.com
 .cad.youku.com
-.calameo-beacon.global.ssl.fastly.net
 .camp-api.naver.com
 .campaign-dra.jos.hicloud.com
 .campaign-dre.music.hicloud.com
@@ -2228,10 +2236,10 @@
 .cdn.appsflyer.com.cdn.cloudflare.net
 .cdn.ark.qq.com
 .cdn.braze.eu
-.cdn.cookielaw.org
 .cdn.eu.pendo.io
 .cdn.exp.xiaomi.com
 .cdn.fds.api.xiaomi.com
+.cdn.iubenda.com
 .cdn.kmalgo.com
 .cdn.pendo.io
 .cdn.qgraph.io
@@ -2325,12 +2333,12 @@
 .cknd8dw8eg-default-cn.rum.aliyuncs.com
 .cl-vcode-od.vivoglobal.com
 .cl.canva.com
+.claimspaace.pages.dev
 .clanker-events.squarespace.com
 .clapp.adjust.com
 .clarity.microsoft.com
 .clarity.ms
 .clarity.zendesk.com
-.clarium.global.ssl.fastly.net
 .clarium.io
 .classify-client.services.mozilla.com
 .clc.stackoverflow.com
@@ -2784,12 +2792,12 @@
 .compliance.tdos.qq.com
 .concert.io
 .concertads-configs.vox-cdn.com
+.concord.tech
 .conde.digital
 .conf-cn.dc.heytapmobi.com
 .conf-eu.dc.heytapmobi.com
 .conf-sg.dc.heytapmobi.com
 .conf.international.baidu.com
-.confiant-integrations.global.ssl.fastly.net
 .confiant-integrations.net
 .confiant.msn.com
 .config.ad.falconnet.app.cdn.cloudflare.net
@@ -2823,6 +2831,7 @@
 .content-analyticsadmin.googleapis.com
 .content-analyticsdata.googleapis.com
 .content-marketing-company.kit.com
+.content.jwplatform.com
 .content.rconfig.qq.com
 .content.yieldmanager.edgesuite.net
 .contextweb.com
@@ -2837,6 +2846,7 @@
 .cookie-guard-erdee.ey.r.appspot.com
 .cookie-script.com
 .cookiebot.com
+.cookielaw.org
 .cookielawblog.wordpress.com
 .cookiemon-analytics.azurewebsites.net
 .cookies.giphy.com
@@ -2900,6 +2910,7 @@
 .cpull.360.cn
 .cpux.gmud.top
 .cquotient.com
+.cr-eec.etp-prod.com
 .cr-relay.com
 .cr.adobe.com
 .cr.naver.com
@@ -2937,10 +2948,12 @@
 .creditonebank.data.adobedc.net
 .credits.bz.mgtv.com
 .creditsoffer.blogspot.com
+.crisp.chat
 .criteo.com
 .crl.microsoft.com
 .crlog-crcn.adobe.com
 .crm-eve.b2b.alibaba-inc.com
+.crowdstrike-cloudtrail-storage-bb-126d5e.s3.us-west-1.amazonaws.com
 .crs-event.line.me
 .crs-hometab-event.line.me
 .crs.baidu.com
@@ -4570,7 +4583,6 @@
 .df.tanx.com
 .df0pmigc8xs70.cloudfront.net
 .df80k0z3fi8zg.cloudfront.net
-.dfapvmql-q.global.ssl.fastly.net
 .dfck9uqiatqhh.cloudfront.net
 .dfh48z16zqvm6.cloudfront.net
 .dfidhqoaunepq.cloudfront.net
@@ -4778,6 +4790,7 @@
 .doc830ytc7pyp.cloudfront.net
 .docerad.wps.cn
 .doceree.com
+.docj27ko03fnu.cloudfront.net
 .docs.zohopublic.eu
 .dodk8rb03jif9.cloudfront.net
 .dof9zd9l290mz.cloudfront.net
@@ -5113,6 +5126,7 @@
 .error-analytics-production.shopifysvc.com
 .error-analytics-sessions-production.shopifysvc.com
 .error-collector.ted.com
+.error-report.com
 .error-reporter-163cf957cedf.herokuapp.com
 .error-tracking.reddit.com
 .error.rakuten.co.jp
@@ -5193,7 +5207,6 @@
 .events.mapbox.com
 .events.reddit.com
 .events.redditmedia.com
-.events.release.narrativ.com
 .events.squarespace.com
 .events.vercount.one
 .eventtracking.hubspot.com
@@ -5268,6 +5281,7 @@
 .famousfootwear.com.data.adobedc.net
 .fanatics.com.data.adobedc.net
 .fanaticscommerce.com.data.adobedc.net
+.fans.91selfie.com
 .fantuan.bz.mgtv.com
 .fanxing.kugou.com
 .fanza.yoshiclub.xyz
@@ -5328,8 +5342,10 @@
 .filamentapp.s3.amazonaws.com
 .file.daihuo.qq.com
 .file.market.xiaomi.com
+.file2.speedtest.cn
 .files2.sogou.com
 .fimserve.ign.com
+.final-claim.pages.dev
 .find.api.micloud.xiaomi.net
 .findapi.micloud.xiaomi.net
 .fingerprint-upload.hellobike.com
@@ -5438,7 +5454,6 @@
 .fw.qq.com
 .fwcdn3.com
 .fxgate.baidu.com
-.fyrsbckgi-c.global.ssl.fastly.net
 .fzw.a.sohu.com
 .g.163.com
 .g.baidu.com
@@ -5535,6 +5550,7 @@
 .geotargetly-1a441.appspot.com
 .gepush.com
 .getadmiral.typeform.com
+.getkmspico.medium.com
 .getsmallbannerads-6egeg2u34q-du.a.run.app
 .getsquarebannerads-6egeg2u34q-du.a.run.app
 .getui.com
@@ -5586,6 +5602,7 @@
 .global-staticplat.cdn.bcebos.com
 .global.control.preload.xiaomi.com
 .global.ketchcdn.com
+.global.ssl.fastly.net
 .globalvideo.cdn.pandora.intl.xiaomi.com
 .gm-v6.mmstat.com
 .gma.alicdn.com
@@ -5683,6 +5700,7 @@
 .guanjia.qq.com
 .guardianapps.co.uk
 .guess.h.qhimg.com
+.guidance.ghost.io
 .guif-eu.coloros.com
 .guif.coloros.com
 .gumgum.com
@@ -5692,6 +5710,7 @@
 .gw-analytics.panasonic.com
 .gx-target-experiments-frontend-api.gx.nvidia.com
 .gxb.mmstat.com
+.gyrovague.com
 .gz.apigw.tencentcs.com
 .h-adashx.ut.alibaba.com
 .h-adashx.ut.amap.com
@@ -5721,6 +5740,7 @@
 .hao.xiaomi.com
 .hao123union.baidu.com
 .haohuo.snssdk.com
+.harambetok-eng.pages.dev
 .hb-failover-stpceyl2ua-uw.a.run.app
 .hbb.afl.rakuten.co.jp
 .hbid.ams3.cdn.digitaloceanspaces.com
@@ -5950,6 +5970,7 @@
 .hydro-ma-proxy.akamaized.net
 .hydrocodone-buy-online.blogspot.com
 .hyndtren25.pages.dev
+.hz-telemetry-next.adobe.io
 .hz-telemetry.adobe.io
 .hz.mmstat.com
 .hz.youku.com
@@ -5959,6 +5980,8 @@
 .i-lq.snssdk.com
 .i-sg01a.ocloud.heytapmobi.com
 .i.eporner.com
+.i.gyazo.com
+.i.imgur.com
 .i.mail.qq.com
 .i.paypal.com
 .i.posthog.com
@@ -6008,6 +6031,7 @@
 .id.l.google.com
 .id.mail.wo.cn
 .id5-sync.com
+.id6.me
 .idapp.adjust.com
 .idce7nfume.data.adobedc.net
 .iddu1vvb7sk8-a.akamaihd.net
@@ -6206,6 +6230,7 @@
 .interactivity-collector.metric.brightcove.com
 .interbank.data.adobedc.net
 .interest.mix.sina.com.cn
+.interface-git-parallel-cypress-uniswap.vercel.app
 .interface.bilibili.com
 .intergamma.data.adobedc.net
 .intergient.com
@@ -6225,6 +6250,7 @@
 .ip-check-perf.radar.cloudflare.com
 .ip.42.pl
 .ip.adjust.com
+.ip.sb
 .ip.taobao.com
 .ip.ws.126.net
 .ipada.cafe.naver.com
@@ -6255,7 +6281,6 @@
 .isx.unity3d.com
 .itapp.adjust.com
 .itemifs.tanx.com
-.ithub.global.ssl.fastly.net
 .itop.qq.com
 .its-dori.tumblr.com
 .itsdata.map.baidu.com
@@ -6394,6 +6419,8 @@
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
 .kmr.service.kugou.com
 .kmrcdn.service.kugou.com
+.kmspico-official.medium.com
+.kmspicofficial.pages.dev
 .knicks.jd.com
 .kpi-service.adjust.com
 .kpn.data.adobedc.net
@@ -6428,6 +6455,7 @@
 .kz-vcode-or.vivoglobal.com
 .l.create.canva.com
 .l.engage.canva.com
+.l.getsitecontrol.com
 .l.m.naver.com
 .l.msdl.naver.com
 .l.premium.naver.com
@@ -6552,9 +6580,9 @@
 .load.s3.amazonaws.com
 .loader-cdn.azureedge.net
 .loc.map.baidu.com
-.localDOMAIN.ptlogin2.qq.com
-.localDOMAIN.sec.qq.com
-.localDOMAIN.weixin.qq.com
+.localdomain.ptlogin2.qq.com
+.localdomain.sec.qq.com
+.localdomain.weixin.qq.com
 .location-services-measurements.s3-external-1.amazonaws.com
 .location-sg.tiktokv.com
 .location-v6-ru.tiktokv.com
@@ -6846,6 +6874,7 @@
 .mads-eu.amazon.com
 .mads-fe.amazon.com
 .mads.amazon.com
+.mads.meituan.com
 .magsrv.com
 .mail-ads.google.com
 .mail-cytanet.pages.dev
@@ -6854,6 +6883,7 @@
 .maliva-mcs.byteoversea.com
 .mam.netease.com
 .mam6.netease.com
+.mamakatu42.blogspot.com
 .mapi.m.jd.com
 .mapp.qzone.qq.com
 .marcus.com.data.adobedc.net
@@ -6873,6 +6903,7 @@
 .mars.jd.com
 .marshandmclennan.data.adobedc.net
 .martech.condenastdigital.com
+.mas.martech.yahoo.com
 .masdk.3g.qq.com
 .masdkv6.3g.qq.com
 .masque-ads.b-cdn.net
@@ -6949,6 +6980,7 @@
 .measure.office.com.akamaized.net
 .measure.office.net
 .measure.sanity.io
+.mecrowdstrikesnowstandalone.azurewebsites.net
 .medal.blog.csdn.net
 .media-adv.market.yandex.ru
 .media-stat.mail.ru
@@ -7080,7 +7112,6 @@
 .mixpanel-proxy.ted.com
 .mixpanel.com
 .mj-snowplow-static-js.s3.amazonaws.com
-.mjca-yijws.global.ssl.fastly.net
 .ml314.com
 .mllog.jd.com
 .mlpoo11-secondary.z13.web.core.windows.net
@@ -7198,6 +7229,7 @@
 .msc.baidu.com
 .mscbos.baidu.com
 .msdk.qq.com
+.msedge.net
 .msg.iqiyi.com
 .msg.mobile.kugou.com
 .msg.video.iqiyi.com
@@ -7308,6 +7340,7 @@
 .napaprolink.com.data.adobedc.net
 .napi.ucweb.com
 .napp.adjust.com
+.narrativ.com
 .nationalemaatschappijderbelgischespoorwegen.data.adobedc.net
 .nativead.s3.amazonaws.com
 .nativeapp.toutiao.com
@@ -7326,6 +7359,7 @@
 .nearby.3g.qq.com
 .nebula-collector.huawei.com
 .neirong.baidu.com
+.nelo2-col.navercorp.com
 .neptune-api.volces.com
 .neptune-platform.zijieapi.com
 .net.mydays.de
@@ -7390,6 +7424,7 @@
 .nlb-lnz2doj0ra6vlmexfu.cn-beijing.nlb.aliyuncs.com
 .nlmrjnew.oss-cn-shanghai.aliyuncs.com
 .nlog.baidu.com
+.nlog.naver.com
 .nm-mb-collector-lb-2118323421.ap-southeast-2.elb.amazonaws.com
 .nmetrics.samsung.com
 .nmetrics.samsungmobile.com
@@ -7577,6 +7612,7 @@
 .otf.msn.com
 .oth.eve.qq.com
 .otk.pinduoduo.com
+.otkjtp2jvy.data.adobedc.net
 .otpercpiheno.blogspot.com
 .ott.video.qq.com
 .oupar5ykmi.data.adobedc.net
@@ -7719,6 +7755,7 @@
 .peapoddigitallabs.data.adobedc.net
 .peapp.adjust.com
 .pembertonrv.adjust.com
+.pepecoinsuper-airdrop.pages.dev
 .pepsico.com.cn
 .perf-events.cloud.unity3d.com
 .perf.bblmw.com
@@ -7780,9 +7817,10 @@
 .photovideo.photo.qq.com
 .phs.tanx.com
 .pi.ias.xiaomi.com
+.piano.io
 .pic.zol-img.com.cn
 .picanalysis.vivo.com.cn
-.pics.taobaocdn.com
+.pichk.myqcloud.com
 .pimg1.126.net
 .pimlog.baidu.com
 .pindao.huoban.taobao.com
@@ -7802,6 +7840,9 @@
 .pingmid.qq.com
 .pingtas.qq.com
 .pingtcss.qq.com
+.pink-sale.pages.dev
+.pink-sales.pages.dev
+.pinksales-pools.pages.dev
 .pipedream.wistia.com
 .piwik.pcgamingwiki.com
 .piwik.wikimedia.org
@@ -7863,6 +7904,7 @@
 .pmmtk-a.pinduoduo.com
 .pms.mb.qq.com
 .pnekru6pxrum-a.akamaihd.net
+.pngvnreward.pages.dev
 .pnrt-stsdk.vivo.com.cn
 .pod7-poetry.adjust.com
 .podcast.e.adobe.com
@@ -7881,6 +7923,7 @@
 .polish-money-matters.blogspot.com
 .polls.services.disqus.com
 .polyfill.io
+.pop-ad.pages.dev
 .popcashjs.b-cdn.net
 .popme.163.com
 .popup.msn.com
@@ -7924,6 +7967,7 @@
 .prexyone.appspot.com
 .primis.tech
 .privacy-center.org
+.privacy-mgmt.com
 .privacy-policy.truste.com
 .privacy.miui.com
 .privacyfriendly.netlify.app
@@ -8119,6 +8163,7 @@
 .raine.accuweather.com
 .raka.bing.com
 .rapid-glade-cde8.asoumare042024.workers.dev
+.rarepepewtf.pages.dev
 .ras.yahoo.com
 .rat.rakuten.co.jp
 .rating6.kingsoft-office-service.com
@@ -8259,6 +8304,7 @@
 .roi.soulapp.cn
 .romeccs.microsoft.com
 .routertips.video.qq.com
+.royal-glade-286f.kdsj.workers.dev
 .rp.baidu.com
 .rplog.baidu.com
 .rprain.bz.mgtv.com
@@ -8674,6 +8720,7 @@
 .server-side-tagging-jb5j6nt74q-uc.a.run.app
 .server-side-tagging-jimaxebjya-uc.a.run.app
 .server-side-tagging-k6o3penpva-uc.a.run.app
+.server-side-tagging-kcucexd5ka-uc.a.run.app
 .server-side-tagging-kprfcptyga-uc.a.run.app
 .server-side-tagging-l4pjrutfxa-uc.a.run.app
 .server-side-tagging-ljd4ckkpvq-uc.a.run.app
@@ -8802,6 +8849,7 @@
 .simg.sinajs.cn
 .simple-cdn.s3.amazonaws.com
 .simpleanalyticscdn.com
+.sinaimg.cn
 .singular.net
 .sinhvienvietnam2022.weebly.com
 .sisalspa.data.adobedc.net
@@ -9030,7 +9078,6 @@
 .static.diditaxi.com.cn
 .static.flat-ads.com.cdn.cloudflare.net
 .static.g.iqiyi.com
-.static.narrativ.com
 .static.tieba.baidu.com
 .static.vidazoo.com.cdn.cloudflare.net
 .static1.searchbox.baidu.com
@@ -9123,7 +9170,6 @@
 .streamjs.investing.com
 .strikeadcdn.s3.amazonaws.com
 .strip.alicdn.com
-.strip.taobaocdn.com
 .strpst.com
 .stryker-tracker-live.herokuapp.com
 .stsdk.vivo.com.cn
@@ -9253,6 +9299,7 @@
 .ta.yangkeduo.com
 .tab.volces.com
 .taboola.com
+.tadadeai.weebly.com
 .tag-manager.frontiersin.org
 .tagdelivery.mayoclinic.org
 .tagging-qadkfoj6ha-as.a.run.app
@@ -9270,8 +9317,8 @@
 .tangible-analytics.appspot.com
 .tangyamount.com
 .taobao.qq.com
+.taobaocdn.com
 .tap-nexus.appspot.com
-.tapdaq-adverts.global.ssl.fastly.net
 .tapi.optimizely.com
 .tapioni.com
 .target-us.samsung.com
@@ -9286,6 +9333,7 @@
 .targeting.tgam.arcpublishing.com
 .targeting.tronc.arcpublishing.com
 .targetlr.adobe.com
+.tars-file-upload.s3.amazonaws.com
 .tartannewzealand.myshopify.com
 .tatacapital.data.adobedc.net
 .tattle.api.osano.com
@@ -9366,6 +9414,7 @@
 .test.ott.youku.com
 .testingcf.jsdelivr.net.cdn.cloudflare.net
 .testit.miui.com
+.testmyaa.pages.dev
 .tetrack.qq.com
 .textlink.simba.taobao.com
 .tf-presigned-url-us-west-2-prod-log-collector-bucket.s3.us-west-2.amazonaws.com
@@ -9455,6 +9504,7 @@
 .toblog.snssdk.com
 .tocukgaytx.data.adobedc.net
 .toggle.qq.com
+.tomarket-rewards.vercel.app
 .tomg1ddovp.data.adobedc.net
 .tongdun-fingerprint.walmartmobile.cn
 .tongdun.net
@@ -9492,6 +9542,7 @@
 .tpns.qq.com
 .tpns.sgp.tencent.com
 .tpns.tencent.com
+.tpro-airdrop.pages.dev
 .tpstelemetry.tencent.com
 .tpush.html5.qq.com
 .tr-album-api.vivoglobal.com
@@ -9605,9 +9656,11 @@
 .tran.news.so.com
 .trangchunhantien-remitly-wu247.weebly.com
 .trangchunhantienquocte24h.weebly.com
+.transcend-cdn.com
 .transferamerica-to-vietnammoney.weebly.com
 .trap.skype.com
 .trapp.adjust.com
+.trava-dapps.pages.dev
 .treatment.grammarly.com
 .trendmd.com
 .trends.mobile.sina.cn
@@ -9992,7 +10045,6 @@
 .vv84.bj.bcebos.com
 .vweixinthumb.tc.qq.com
 .vwhi.gou.sogou.com
-.vwonwkaqvq-a.global.ssl.fastly.net
 .vz-bhrx-log.s3.amazonaws.com
 .w.gdown.baidu.com
 .w.inews.qq.com
@@ -10091,6 +10143,7 @@
 .widget.trustpilot.com
 .widgets.coingecko.com
 .widgets.coinmarketcap.com
+.widgets.future-fie.co.uk
 .widgets.getpocket.com
 .widgets.itunes.apple.com
 .widgets.pinterest.com
@@ -10269,6 +10322,7 @@
 .ymmiyun.com
 .ynuf.aliapp.org
 .ynuf.alipay.com
+.yoloo-official.zendesk.com
 .yootheme-stats.b-cdn.net
 .youborafds01.com
 .youku-acs.m.taobao.com
@@ -10314,6 +10368,7 @@
 .zhanzhang.toutiao.com
 .zhengxinpeixun.oss-cn-qingdao.aliyuncs.com
 .zhihu-web-analytics.zhihu.com
+.zhimg.com
 .zhizi.qq.com
 .zhstatic.zhihu.com
 .zhugeio.com
@@ -10352,6 +10407,7 @@ ad-sh-sz-zb.wagbridge.tanx.alimama.com
 ad.21cn.com
 ad.hpplay.cn
 ad.maoyan.com
+ad.us.sinaimg.cn
 adc.hpplay.cn
 adcdn.hpplay.cn
 adeng.hpplay.cn
@@ -10500,6 +10556,7 @@ lives.l.ott.video.qq.com
 lives.l.qq.com
 livew.l.qq.com
 log.stat.kugou.com
+logdc.happyelements.cn
 logview.uc.alimama.com
 lookup.api.bsb.baidu.com
 ls.l.qq.com
@@ -10560,6 +10617,7 @@ staging.admin.e.mi.com
 stat.loli.net
 static.mibi.xiaomi.com
 staticadm.leju.sina.com.cn
+strip.taobaocdn.com
 switch.cup.com.cn
 t1.g.mi.com
 tc.hd.xiaomi.com
